[package]
name = "lunatic-assemblyscript-rtrace-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for getting Lunatic host version"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-assemblyscript-rtrace-api"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
wasmtime = { workspace = true }
lunatic-process = { workspace = true }
lunatic-common-api = { workspace = true }
